# CodeCraft2021

./: README.md
data/Finall/: data_analysis.ipynb  judge.py  regression.py  simulation.py  test.py
data/Finall/.ipynb_checkpoints/: data_analysis-checkpoint.ipynb
data/Preliminary/: judge.py  rank.py  初赛-练习赛-更新.csv  初赛-练习赛榜单.csv
data/Rematch/: draw.py  judge.py
src/: build.sh  judge.sh  run1.sh  run2.sh  run_my_data.sh  submit.sh
src/CodeCraft-2021/: CMakeLists.txt  CodeCraft-2021.cpp
src/CodeCraft-2021/scenario/: log.cpp  log.h  request.h  server.cpp  server.h  tools.h  virtual_machine.h
src/CodeCraft-2021/strategy/: greedy.cpp  greedy.h  linear_regression.h  purchase.cpp
